tests/baselines/reference/interfaceImplementation4.errors.txt
tests/cases/compiler/interfaceImplementation4.ts(8,7): error TS2420: Class 'C5' incorrectly implements interface 'I1'.
  Index signature is missing in type 'I1'.


==== tests/cases/compiler/interfaceImplementation4.ts (1 errors) ====
    interface I1 {
        iObj:{ };
        iNum:number;
        iAny:any;
        iFn():void;
    }
    
    class C5 implements I1 {
          ~~
!!! error TS2420: Class 'C5' incorrectly implements interface 'I1'.
!!! error TS2420:   Index signature is missing in type 'I1'.
        public iNum:number;
        public iAny:any;
        public iFn() { }
    }
    